// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker renders correctly 1`] = `
<div
  class="kd-color-picker-container"
>
  <input
    class="kd-input kd-input-size-middle kd-input-underline kd-color-picker-input"
    placeholder="#"
    type="text"
    value=""
  />
  <div
    class="kd-color-picker-icon-container"
  >
    <div
      class="kd-color-picker-icon kd-color-picker-icon-underline kd-color-picker-icon-down"
      style="background-color:rgb(178, 178, 178)"
    >
      <i
        class="kdicon kdicon-arrow-down"
      />
    </div>
  </div>
</div>
`;

exports[`ColorPicker renders correctly 2`] = `
<div
  class="kd-color-picker-container"
>
  <input
    class="kd-input kd-input-size-middle kd-color-picker-input"
    placeholder="#"
    type="text"
    value=""
  />
  <div
    class="kd-color-picker-icon-container"
  >
    <div
      class="kd-color-picker-icon kd-color-picker-icon-bordered kd-color-picker-icon-down"
      style="background-color:rgb(178, 178, 178)"
    >
      <i
        class="kdicon kdicon-arrow-down"
      />
    </div>
  </div>
</div>
`;

exports[`ColorPicker renders correctly with no child 1`] = `
<ColorPicker>
  <div
    className="kd-color-picker-container"
  >
    <Input
      borderType="bordered"
      className="kd-color-picker-input"
      onChange={[Function]}
      onClick={[Function]}
      placeholder="#"
      value=""
    >
      <ClearableInput
        borderType="bordered"
        className="kd-color-picker-input"
        element={
          <input
            className="kd-input kd-input-size-middle kd-color-picker-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            placeholder="#"
            type="text"
            value=""
          />
        }
        focused={false}
        handleReset={[Function]}
        inputCount={null}
        inputType="input"
        onChange={[Function]}
        onClick={[Function]}
        placeholder="#"
        prefixCls="kd-input"
        size="middle"
        type="text"
        value=""
      >
        <input
          className="kd-input kd-input-size-middle kd-color-picker-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          placeholder="#"
          type="text"
          value=""
        />
      </ClearableInput>
    </Input>
    <div
      className="kd-color-picker-icon-container"
      onClick={[Function]}
    >
      <div
        className="kd-color-picker-icon kd-color-picker-icon-bordered kd-color-picker-icon-down"
        style={
          Object {
            "backgroundColor": "rgb(178, 178, 178)",
          }
        }
      >
        <Icon
          type="arrow-down"
        >
          <i
            className="kdicon kdicon-arrow-down"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          />
        </Icon>
      </div>
    </div>
  </div>
</ColorPicker>
`;

exports[`ColorPicker renders correctly with null or undefined 1`] = `
<ColorPicker>
  <div
    className="kd-color-picker-container"
  >
    <Input
      borderType="bordered"
      className="kd-color-picker-input"
      onChange={[Function]}
      onClick={[Function]}
      placeholder="#"
      value=""
    >
      <ClearableInput
        borderType="bordered"
        className="kd-color-picker-input"
        element={
          <input
            className="kd-input kd-input-size-middle kd-color-picker-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            placeholder="#"
            type="text"
            value=""
          />
        }
        focused={false}
        handleReset={[Function]}
        inputCount={null}
        inputType="input"
        onChange={[Function]}
        onClick={[Function]}
        placeholder="#"
        prefixCls="kd-input"
        size="middle"
        type="text"
        value=""
      >
        <input
          className="kd-input kd-input-size-middle kd-color-picker-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          placeholder="#"
          type="text"
          value=""
        />
      </ClearableInput>
    </Input>
    <div
      className="kd-color-picker-icon-container"
      onClick={[Function]}
    >
      <div
        className="kd-color-picker-icon kd-color-picker-icon-bordered kd-color-picker-icon-down"
        style={
          Object {
            "backgroundColor": "rgb(178, 178, 178)",
          }
        }
      >
        <Icon
          type="arrow-down"
        >
          <i
            className="kdicon kdicon-arrow-down"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          />
        </Icon>
      </div>
    </div>
  </div>
</ColorPicker>
`;
